fix(dop): project resource table adjustment in project setting

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1203,7 +1203,7 @@
     "all": "所有",
     "all clusters": "所有集群",
     "allocated": "分配量：",
-    "allocated utilization rate": "分配使用率",
+    "allocated and utilization rate": "分配及使用率",
     "allocation": "分配",
     "analysis completed": "分析完成",
     "analysis failed": "分析失败",
@@ -3172,6 +3172,7 @@
     "project icon": "项目图标",
     "project info": "项目信息",
     "project member": "项目成员",
+    "project resource": "项目资源",
     "project updated successfully": "更新项目成功",
     "protect branch, not editable": "保护分支, 不可编辑",
     "protected branch": "分支保护",
