--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1203,7 +1203,7 @@
     "all": "all",
     "all clusters": "all clusters",
     "allocated": "allocated",
-    "allocated utilization rate": "allocated utilization rate",
+    "allocated and utilization rate": "allocated and utilization rate",
     "allocation": "allocation",
     "analysis completed": "analysis completed",
     "analysis failed": "analysis failed",
@@ -3172,6 +3172,7 @@
     "project icon": "project icon",
     "project info": "project info",
     "project member": "project member",
+    "project resource": "project resource",
     "project updated successfully": "project updated successfully",
     "protect branch, not editable": "protect branch, not editable",
     "protected branch": "protected branch",
