fix(dop): project resource table adjustment in project setting (#1638)
* fix(dop): project resource table adjustment in project setting

* fix: no quota processing

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1232,7 +1232,7 @@
     "all": "all",
     "all clusters": "all clusters",
     "allocated": "allocated",
-    "allocated utilization rate": "allocated utilization rate",
+    "allocated and utilization rate": "allocated and utilization rate",
     "allocation": "allocation",
     "analysis completed": "analysis completed",
     "analysis failed": "analysis failed",
@@ -3203,6 +3203,7 @@
     "project icon": "project icon",
     "project info": "project info",
     "project member": "project member",
+    "project resource": "project resource",
     "project updated successfully": "project updated successfully",
     "protect branch, not editable": "protect branch, not editable",
     "protected branch": "protected branch",
