fix: add missing i18n

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1130,7 +1130,6 @@
     "May": "May",
     "Members under the project/application associated with the current API can view it.": "members under the project/application associated with the current API can view",
     "Memory allocation": "Memory allocation",
-    "Memory usage": "Memory usage",
     "Middle-east & India": "Middle-east & India",
     "Mobile": "Mobile",
     "Model": "Model",
@@ -1233,7 +1232,6 @@
     "all clusters": "all clusters",
     "allocated": "allocated",
     "allocated and utilization rate": "allocated and utilization rate",
-    "allocation": "allocation",
     "analysis completed": "analysis completed",
     "analysis failed": "analysis failed",
     "analysis rule": "analysis rule",
@@ -1273,7 +1271,6 @@
     "authorized API": "authorized API",
     "auto create": "auto create",
     "automatic authorization": "automatic authorization",
-    "available": "available",
     "back to bottom": "back to bottom",
     "back to home": "back to home",
     "back to repo home": "back to repo home",
@@ -1889,6 +1886,8 @@
     "title": "title",
     "today": "today",
     "total": "total",
+    "total CPU allocation": "total CPU allocation",
+    "total Memory allocation": "total Memory allocation",
     "traffic audit": "traffic audit",
     "traffic overview": "traffic overview",
     "trigger time": "trigger time",
@@ -1918,7 +1917,6 @@
     "uppercase letter": "uppercase letter",
     "url address": "url address",
     "usage": "used:",
-    "usage limit exceeded": "usage limit exceeded",
     "user": "user",
     "user ID": "user ID",
     "user name": "user name",
@@ -2842,7 +2840,6 @@
     "auto save": "auto save",
     "auto test": "auto test",
     "automatic test report": "automatic test report",
-    "available": "available",
     "backlog": "backlog",
     "basic information": "basic information",
     "batch processing": "batch processing",
@@ -2874,7 +2871,6 @@
     "click to copy": "click to copy",
     "close": "close",
     "closed": "closed",
-    "cluster setting": "cluster setting",
     "cluster used by the environment": "cluster used by the environment",
     "code coverage statistics": "code coverage statistics",
     "code development": "code development",
