--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1130,7 +1130,6 @@
     "May": "5月",
     "Members under the project/application associated with the current API can view it.": "当前API关联的项目/应用下的成员可以查看",
     "Memory allocation": "内存分配",
-    "Memory usage": "内存使用率",
     "Middle-east & India": "中东与印度",
     "Mobile": "移动",
     "Model": "模型",
@@ -1233,7 +1232,6 @@
     "all clusters": "所有集群",
     "allocated": "分配量：",
     "allocated and utilization rate": "分配及使用率",
-    "allocation": "分配",
     "analysis completed": "分析完成",
     "analysis failed": "分析失败",
     "analysis rule": "分析规则",
@@ -1273,7 +1271,6 @@
     "authorized API": "已授权 API",
     "auto create": "自动创建",
     "automatic authorization": "自动授权",
-    "available": "可使用",
     "back to bottom": "回到底部",
     "back to home": "返回首页",
     "back to repo home": "返回仓库首页",
@@ -1889,6 +1886,8 @@
     "title": "标题",
     "today": "今天",
     "total": "总",
+    "total CPU allocation": "CPU 分配总量",
+    "total Memory allocation": "内存分配总量",
     "traffic audit": "流量审计",
     "traffic overview": "流量概览",
     "trigger time": "触发时间",
@@ -1918,7 +1917,6 @@
     "uppercase letter": "大写字母",
     "url address": "URL 地址",
     "usage": "使用量：",
-    "usage limit exceeded": "超出使用限制",
     "user": "用户",
     "user ID": "用户ID",
     "user name": "用户名",
@@ -2842,7 +2840,6 @@
     "auto save": "自动保存",
     "auto test": "自动化测试",
     "automatic test report": "自动化测试报告",
-    "available": "可用",
     "backlog": "待处理",
     "basic information": "基本信息",
     "batch processing": "批量处理",
@@ -2874,7 +2871,6 @@
     "click to copy": "单击复制",
     "close": "关闭",
     "closed": "已关闭",
-    "cluster setting": "集群设置",
     "cluster used by the environment": "环境所用的集群",
     "code coverage statistics": "代码覆盖率统计",
     "code development": "代码研发",
