fix(common): add project quota

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1240,7 +1240,7 @@
     "all clusters": "all clusters",
     "allocated": "allocated",
     "allocation": "allocation",
-    "allocated utilization rate": "allocated utilization rate",
+    "allocated and utilization rate": "allocated and utilization rate",
     "analysis completed": "analysis completed",
     "analysis failed": "analysis failed",
     "analysis rule": "analysis rule",
@@ -3203,6 +3203,7 @@
     "project ID": "project ID",
     "project info": "project info",
     "project member": "project member",
+    "project resource": "project resource",
     "project updated successfully": "project updated successfully",
     "protect branch, not editable": "protect branch, not editable",
     "protected branch": "protected branch",
