--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1240,7 +1240,7 @@
     "all clusters": "所有集群",
     "allocated": "分配量：",
     "allocation": "分配",
-    "allocated utilization rate": "分配使用率",
+    "allocated and utilization rate": "分配及使用率",
     "analysis completed": "分析完成",
     "analysis failed": "分析失败",
     "analysis rule": "分析规则",
@@ -3203,6 +3203,7 @@
     "project ID": "项目 ID",
     "project info": "项目信息",
     "project member": "项目成员",
+    "project resource": "项目资源",
     "project updated successfully": "更新项目成功",
     "protect branch, not editable": "保护分支, 不可编辑",
     "protected branch": "分支保护",
