feat(cli): add external i18n

--- a/locales/en.json
+++ b/locales/en.json
@@ -566,6 +566,7 @@
     "nickname": "nickname",
     "no available version": "no available version",
     "no items selected": "no items selected",
+    "no more data": "no more data",
     "no more than {size} characters": "no more than {size} characters",
     "no need to execute": "no need to execute",
     "no running runtime": "no running runtime",
