--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1221,6 +1221,7 @@
     "blacklist": "blacklist",
     "blocking resource loading time": "blocking resource loading time",
     "branch call control": "branch call control",
+    "browse context": "browse context",
     "browse performance": "browse performance",
     "browser": "browser",
     "browser access performance (within 1 hour)": "browser access performance (within 1 hour)",
@@ -1286,6 +1287,7 @@
     "cross-domain access": "cross-domain access",
     "cross-domain address": "cross-domain address",
     "cross-site protection": "cross-site protection",
+    "current log": "current log",
     "current service": "current service",
     "current span time": "current span time",
     "currently no request": "currently no request",
@@ -1310,6 +1312,7 @@
     "determine": "determine",
     "device": "device",
     "device type": "device type",
+    "display fields": "display fields",
     "display name": "display name",
     "display setting": "display setting",
     "document": "document",
@@ -1322,6 +1325,7 @@
     "duration": "duration",
     "duration asc": "duration asc",
     "duration desc": "duration desc",
+    "earlier": "earlier",
     "edit": "edit",
     "edit a endpoint": "edit a endpoint",
     "enable daily report": "enable daily report",
@@ -1430,10 +1434,12 @@
     "inverse selection of all endpoints": "inverse selection of all endpoints",
     "key authentication": "key authentication",
     "key authentication mode": "key authentication mode",
+    "labels filter": "labels filter",
     "largest isolation ratio": "largest isolation ratio",
     "last trigger": "last trigger",
     "last trigger time": "last trigger time",
     "latency": "latency",
+    "later": "later",
     "latest news": "latest news",
     "limit type": "limit type",
     "limited flow strategy": "limited flow strategy",
