--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1221,6 +1221,7 @@
     "blacklist": "黑名单",
     "blocking resource loading time": "阻塞资源加载耗时",
     "branch call control": "分支流量管控",
+    "browse context": "浏览上下文",
     "browse performance": "浏览性能",
     "browser": "浏览器",
     "browser access performance (within 1 hour)": "浏览器访问性能(1小时内)",
@@ -1286,6 +1287,7 @@
     "cross-domain access": "跨域访问",
     "cross-domain address": "跨域地址",
     "cross-site protection": "跨站防护",
+    "current log": "当前日志",
     "current service": "当前服务",
     "current span time": "当前 span 时间",
     "currently no request": "当前无请求",
@@ -1310,6 +1312,7 @@
     "determine": "确定",
     "device": "设备",
     "device type": "设备类型",
+    "display fields": "显示字段",
     "display name": "展示名称",
     "display setting": "显示设置",
     "document": "文档",
@@ -1322,6 +1325,7 @@
     "duration": "持续时间",
     "duration asc": "耗时升序",
     "duration desc": "耗时降序",
+    "earlier": "更早",
     "edit": "编辑",
     "edit a endpoint": "编辑流量入口",
     "enable daily report": "开启日报",
@@ -1430,10 +1434,12 @@
     "inverse selection of all endpoints": "反选全部流量入口",
     "key authentication": "key认证",
     "key authentication mode": "Key认证模式",
+    "labels filter": "标签过滤",
     "largest isolation ratio": "实例最大隔离比例",
     "last trigger": "最后一次触发",
     "last trigger time": "最后触发时间",
     "latency": "延时",
+    "later": "更新",
     "latest news": "最新动态",
     "limit type": "限制方式",
     "limited flow strategy": "限流策略",
