--- a/locales/zh.json
+++ b/locales/zh.json
@@ -566,6 +566,7 @@
     "nickname": "昵称",
     "no available version": "暂无可用版本",
     "no items selected": "未选中任何项",
+    "no more data": "没有更多数据",
     "no more than {size} characters": "不超过{size}字符",
     "no need to execute": "无需执行",
     "no running runtime": "没有运行的Runtime",
