--- a/modules/uc/src/locales/en.json
+++ b/modules/uc/src/locales/en.json
@@ -1,30 +1,30 @@
 {
   "default": {
     "Already have an account?": "Already have an account?",
-    "can not be empty": "can not be empty",
-    "confirm password": "confirm password",
-    "confirm new password": "confirm new password",
     "Do not have an account?": "Do not have an account?",
-    "email": "email",
-    "enter your {name}": "enter your {name}",
-    "enter your email/username": "enter your email/username",
     "Hello {name}": "Hello {name}",
-    "inconsistent passwords": "inconsistent passwords",
-    "keep login": "keep login",
     "Login": "Login",
     "Logout": "Logout",
+    "Please enter the correct {name}": "Please enter the correct {name}",
+    "Reset password": "Reset password",
+    "Sign up": "Sign up",
+    "Update": "Update",
+    "Welcome to Erda": "Welcome to Erda",
+    "can not be empty": "can not be empty",
+    "confirm new password": "confirm new password",
+    "confirm password": "confirm password",
+    "email": "email",
+    "enter your email/username": "enter your email/username",
+    "enter your {name}": "enter your {name}",
+    "inconsistent passwords": "inconsistent passwords",
+    "keep login": "keep login",
     "mobile": "mobile",
     "new password": "new password",
     "nick name": "nick name",
     "password": "password",
     "password-tip": "No less than 8 digits containing uppercase letters, lowercase letters, and symbols",
-    "Please enter the correct {name}": "Please enter the correct {name}",
     "registered successfully": "registered successfully",
-    "Reset password": "Reset password",
-    "Sign up": "Sign up",
-    "Update": "Update",
     "update successfully": "update successfully",
-    "username": "username",
-    "Welcome to Erda": "Welcome to Erda"
+    "username": "username"
   }
 }
