--- a/modules/uc/src/locales/zh.json
+++ b/modules/uc/src/locales/zh.json
@@ -1,30 +1,30 @@
 {
   "default": {
     "Already have an account?": "已经有账号?",
-    "can not be empty": "不能为空",
-    "confirm password": "确认密码",
-    "confirm new password": "确认新密码",
     "Do not have an account?": "没有账号?",
-    "email": "邮箱",
-    "enter your {name}": "请输入您的{name}",
-    "enter your email/username": "请输入您的邮箱/用户名",
     "Hello {name}": "您好 {name}",
-    "inconsistent passwords": "密码不一致",
-    "keep login": "保持登录",
     "Login": "登录",
     "Logout": "登出",
+    "Please enter the correct {name}": "请输入正确的{name}",
+    "Reset password": "重置密码",
+    "Sign up": "注册",
+    "Update": "更新",
+    "Welcome to Erda": "欢迎登录Erda",
+    "can not be empty": "不能为空",
+    "confirm new password": "确认新密码",
+    "confirm password": "确认密码",
+    "email": "邮箱",
+    "enter your email/username": "请输入您的邮箱/用户名",
+    "enter your {name}": "请输入您的{name}",
+    "inconsistent passwords": "密码不一致",
+    "keep login": "保持登录",
     "mobile": "手机",
     "new password": "新密码",
     "nick name": "昵称",
     "password": "密码",
     "password-tip": "不少于8位的包含大写字母、小写字母、符号",
-    "Please enter the correct {name}": "请输入正确的{name}",
     "registered successfully": "注册成功",
-    "Reset password": "重置密码",
-    "Sign up": "注册",
-    "Update": "更新",
     "update successfully": "更新成功",
-    "username": "用户名",
-    "Welcome to Erda": "欢迎登录Erda"
+    "username": "用户名"
   }
 }
