feat(common): resolve conflect

--- a/locales/en.json
+++ b/locales/en.json
@@ -52,6 +52,7 @@
     "Europe & America": "Europe & America",
     "Fast data": "Fast data",
     "February": "February",
+    "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see": "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see",
     "For editing members, setting member roles and role permissions, please refer to": "For editing members, setting member roles and role permissions, please refer to",
     "Frankfurt": "Frankfurt",
     "Germany": "Germany",
@@ -78,7 +79,6 @@
     "May": "May",
     "Members under the project/application associated with the current API can view it.": "members under the project/application associated with the current API can view",
     "Memory allocation": "Memory allocation",
-    "Memory usage": "Memory usage",
     "Middle-east & India": "Middle-east & India",
     "Mobile": "Mobile",
     "Model": "Model",
@@ -181,6 +181,7 @@
     "all clusters": "all clusters",
     "all keys are required": "all keys are required",
     "allocated": "allocated",
+    "allocated and utilization rate": "allocated and utilization rate",
     "analysis completed": "analysis completed",
     "analysis failed": "analysis failed",
     "analysis rule": "analysis rule",
@@ -221,7 +222,6 @@
     "authorized API": "authorized API",
     "auto create": "auto create",
     "automatic authorization": "automatic authorization",
-    "available": "available",
     "back to bottom": "back to bottom",
     "back to home": "back to home",
     "back to repo home": "back to repo home",
@@ -848,6 +848,8 @@
     "title": "title",
     "today": "today",
     "total": "total",
+    "total CPU allocation": "total CPU allocation",
+    "total Memory allocation": "total Memory allocation",
     "total {total} items": "total {total} items",
     "total {total} items, current display top 10000": "total {total} items, current display top 10000",
     "traffic audit": "traffic audit",
@@ -879,7 +881,6 @@
     "uppercase letter": "uppercase letter",
     "url address": "url address",
     "usage": "used:",
-    "usage limit exceeded": "usage limit exceeded",
     "user": "user",
     "user ID": "user ID",
     "user name": "user name",
