--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2737,6 +2737,7 @@
     "use case list": "use case list",
     "use case title": "use case title",
     "use case title (required)": "use case title (required)",
+    "using clusters": "using clusters",
     "validation rules": "validation rules",
     "view by iteration": "view by iteration",
     "view config": "view config",
