--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2737,6 +2737,7 @@
     "use case list": "用例列表",
     "use case title": "用例标题",
     "use case title (required)": "用例标题(必填)",
+    "using clusters": "使用集群",
     "validation rules": "验证规则",
     "view by iteration": "按迭代查看",
     "view config": "查看配置",
