--- a/locales/zh.json
+++ b/locales/zh.json
@@ -52,6 +52,7 @@
     "Europe & America": "欧洲与美洲",
     "Fast data": "快数据平台",
     "February": "2月",
+    "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see": "各环境对应的集群资源信息，具体集群的概念和设置请参考",
     "For editing members, setting member roles and role permissions, please refer to": "编辑成员，设置成员角色，相关角色权限请参考",
     "Frankfurt": "法兰克福",
     "Germany": "德国",
@@ -78,7 +79,6 @@
     "May": "5月",
     "Members under the project/application associated with the current API can view it.": "当前API关联的项目/应用下的成员可以查看",
     "Memory allocation": "内存分配",
-    "Memory usage": "内存使用率",
     "Middle-east & India": "中东与印度",
     "Mobile": "移动",
     "Model": "模型",
@@ -181,6 +181,7 @@
     "all clusters": "所有集群",
     "all keys are required": "所有标示必填",
     "allocated": "分配量：",
+    "allocated and utilization rate": "分配及使用率",
     "analysis completed": "分析完成",
     "analysis failed": "分析失败",
     "analysis rule": "分析规则",
@@ -221,7 +222,6 @@
     "authorized API": "已授权 API",
     "auto create": "自动创建",
     "automatic authorization": "自动授权",
-    "available": "可使用",
     "back to bottom": "回到底部",
     "back to home": "返回首页",
     "back to repo home": "返回仓库首页",
@@ -848,6 +848,8 @@
     "title": "标题",
     "today": "今天",
     "total": "总",
+    "total CPU allocation": "CPU 分配总量",
+    "total Memory allocation": "内存分配总量",
     "total {total} items": "共 {total} 条",
     "total {total} items, current display top 10000": "共 {total} 条，当前显示前10000条",
     "traffic audit": "流量审计",
@@ -879,7 +881,6 @@
     "uppercase letter": "大写字母",
     "url address": "URL 地址",
     "usage": "使用量：",
-    "usage limit exceeded": "超出使用限制",
     "user": "用户",
     "user ID": "用户ID",
     "user name": "用户名",
