feat(dop): remove addonPlatform ns

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1,41 +1,4 @@
 {
-  "addonPlatform": {
-    "addon category": "addons",
-    "analyze ID": "analyze ID",
-    "analyze id": "analyze id",
-    "analyzing": "analyzing",
-    "application / service / instance name": "application / service / instance name",
-    "attaching to process": "attaching to process",
-    "audio processing": "audio processing",
-    "completed": "completed",
-    "content": "content",
-    "content management": "content management",
-    "custom": "custom",
-    "deployment details": "deployment details",
-    "distributed collaboration": "distributed collaboration",
-    "failed": "failed",
-    "general ability": "general ability",
-    "historical analysis": "historical analysis",
-    "image processing": "image processing",
-    "jvm process info": "jvm process info",
-    "jvm properties": "jvm properties",
-    "message": "message",
-    "monitor & log": "monitor & log",
-    "new retail": "new retail",
-    "processing": "processing",
-    "search": "search",
-    "security": "security",
-    "select instance": "select instance",
-    "solution": "solution",
-    "srm": "srm",
-    "start analysis": "start analysis",
-    "started at": "started at",
-    "stop analysis": "stop analysis",
-    "storage": "storage",
-    "system properties": "system properties",
-    "terminate": "terminate",
-    "traffic load": "traffic load"
-  },
   "application": {
     " coverage": " coverage",
     "An Action with the same name exists.": "An Action with the same name exists.",
@@ -1082,16 +1045,51 @@
   },
   "dop": {
     "JVM analysis": "JVM analysis",
+    "addon category": "addons",
     "addon info": "addon info",
     "addon setting": "addon setting",
+    "analyze ID": "analyze ID",
+    "analyze id": "analyze id",
+    "analyzing": "analyzing",
+    "application / service / instance name": "application / service / instance name",
     "approval request": "approval request",
     "approved": "approved",
+    "attaching to process": "attaching to process",
+    "audio processing": "audio processing",
+    "completed": "completed",
     "console": "console",
     "consumer manager": "consumer manager",
+    "content": "content",
+    "content management": "content management",
+    "custom": "custom",
+    "deployment details": "deployment details",
     "deployment request": "deployment request",
+    "distributed collaboration": "distributed collaboration",
+    "failed": "failed",
+    "general ability": "general ability",
+    "historical analysis": "historical analysis",
+    "image processing": "image processing",
     "initiated": "initiated",
+    "jvm process info": "jvm process info",
+    "jvm properties": "jvm properties",
+    "message": "message",
+    "monitor & log": "monitor & log",
+    "new retail": "new retail",
+    "processing": "processing",
+    "search": "search",
     "search by owned project": "search by owned project",
-    "there is a new import case, click to refresh the list": "there is a new import case, click to refresh the list"
+    "security": "security",
+    "select instance": "select instance",
+    "solution": "solution",
+    "srm": "srm",
+    "start analysis": "start analysis",
+    "started at": "started at",
+    "stop analysis": "stop analysis",
+    "storage": "storage",
+    "system properties": "system properties",
+    "terminate": "terminate",
+    "there is a new import case, click to refresh the list": "there is a new import case, click to refresh the list",
+    "traffic load": "traffic load"
   },
   "ecp": {
     "Edge computing": "Edge computing",
