--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1,41 +1,4 @@
 {
-  "addonPlatform": {
-    "addon category": "服务目录",
-    "analyze ID": "分析 ID",
-    "analyze id": "分析id",
-    "analyzing": "正在分析",
-    "application / service / instance name": "应用 / 服务 / 实例名",
-    "attaching to process": "正在附加到进程",
-    "audio processing": "音频处理",
-    "completed": "已完成",
-    "content": "文本处理",
-    "content management": "内容管理",
-    "custom": "自定义",
-    "deployment details": "部署详情页",
-    "distributed collaboration": "分布式协作",
-    "failed": "失败",
-    "general ability": "通用能力",
-    "historical analysis": "历史分析",
-    "image processing": "图像处理",
-    "jvm process info": "进程信息",
-    "jvm properties": "JVM 属性",
-    "message": "消息",
-    "monitor & log": "监控&日志",
-    "new retail": "新零售能力",
-    "processing": "进行中",
-    "search": "查询",
-    "security": "安全",
-    "select instance": "选择实例",
-    "solution": "解决方案",
-    "srm": "采供能力",
-    "start analysis": "启动分析",
-    "started at": "启动于",
-    "stop analysis": "停止分析",
-    "storage": "存储",
-    "system properties": "系统属性",
-    "terminate": "终止",
-    "traffic load": "流量负载"
-  },
   "application": {
     " coverage": "覆盖率",
     "An Action with the same name exists.": "存在同名 Action!",
@@ -1082,16 +1045,51 @@
   },
   "dop": {
     "JVM analysis": "JVM 分析",
+    "addon category": "服务目录",
     "addon info": "服务信息",
     "addon setting": "服务设置",
+    "analyze ID": "分析 ID",
+    "analyze id": "分析id",
+    "analyzing": "正在分析",
+    "application / service / instance name": "应用 / 服务 / 实例名",
     "approval request": "审批请求",
     "approved": "我审批的",
+    "attaching to process": "正在附加到进程",
+    "audio processing": "音频处理",
+    "completed": "已完成",
     "console": "控制台",
     "consumer manager": "使用者管理",
+    "content": "文本处理",
+    "content management": "内容管理",
+    "custom": "自定义",
+    "deployment details": "部署详情页",
     "deployment request": "部署请求",
+    "distributed collaboration": "分布式协作",
+    "failed": "失败",
+    "general ability": "通用能力",
+    "historical analysis": "历史分析",
+    "image processing": "图像处理",
     "initiated": "我发起的",
+    "jvm process info": "进程信息",
+    "jvm properties": "JVM 属性",
+    "message": "消息",
+    "monitor & log": "监控&日志",
+    "new retail": "新零售能力",
+    "processing": "进行中",
+    "search": "查询",
     "search by owned project": "通过所在项目搜索",
-    "there is a new import case, click to refresh the list": "有新导入用例，点击刷新列表"
+    "security": "安全",
+    "select instance": "选择实例",
+    "solution": "解决方案",
+    "srm": "采供能力",
+    "start analysis": "启动分析",
+    "started at": "启动于",
+    "stop analysis": "停止分析",
+    "storage": "存储",
+    "system properties": "系统属性",
+    "terminate": "终止",
+    "there is a new import case, click to refresh the list": "有新导入用例，点击刷新列表",
+    "traffic load": "流量负载"
   },
   "ecp": {
     "Edge computing": "边缘计算平台",
