feat(msp): log tail

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2350,6 +2350,7 @@
     "filter by path name": "filter by path name",
     "filter by registration type": "filter by registration type",
     "filter by service": "filter by service",
+    "filter content": "filter content",
     "find the authorization interface": "find the authorization interface",
     "first paint time": "first paint time",
     "first trigger": "first trigger",
@@ -2373,6 +2374,7 @@
     "grayscale release": "grayscale release",
     "header-X-App-Key": "use the appKey field as the request argument named \"appKey\" or the request header named \"X-App-Key\"",
     "hide no rule interface": "hide no rule interface",
+    "highlight": "highlight",
     "historical downtime": "historical downtime",
     "history available time": "history available time",
     "hot spot analysis": "hot spot analysis",
@@ -2412,6 +2414,7 @@
     "limit type": "limit type",
     "limited flow strategy": "limited flow strategy",
     "link information": "link information",
+    "live tail": "实时 tail",
     "load event": "load event",
     "load more": "load more",
     "location analysis": "location analysis",
@@ -2515,6 +2518,7 @@
     "please select an instance": "please select an instance",
     "please select module": "please select module",
     "policy name": "policy name",
+    "press enter to confirm": "press enter to confirm",
     "prev": "prev",
     "previous": "previous",
     "process": "process",
