--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2350,6 +2350,7 @@
     "filter by path name": "输入路径名称过滤",
     "filter by registration type": "按注册类型过滤",
     "filter by service": "按服务过滤",
+    "filter content": "过滤内容",
     "find the authorization interface": "查找需授权接口",
     "first paint time": "白屏耗时",
     "first trigger": "第一次触发",
@@ -2373,6 +2374,7 @@
     "grayscale release": "灰度发布",
     "header-X-App-Key": "请将appKey带在名为appKey的url参数或者名为X-App-Key的请求头上",
     "hide no rule interface": "隐藏无规则接口",
+    "highlight": "高亮显示",
     "historical downtime": "历史宕机时间",
     "history available time": "历史可用时间",
     "hot spot analysis": "热点分析",
@@ -2412,6 +2414,7 @@
     "limit type": "限制方式",
     "limited flow strategy": "限流策略",
     "link information": "链路信息",
+    "live tail": "live tail",
     "load event": "load事件",
     "load more": "加载更多",
     "location analysis": "定位分析",
@@ -2515,6 +2518,7 @@
     "please select an instance": "请选择实例",
     "please select module": "请选择模块",
     "policy name": "策略名称",
+    "press enter to confirm": "输入内容后按回车确认",
     "prev": "上一步",
     "previous": "上一个",
     "process": "进程分析",
