feat(msp): log tail

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2414,7 +2414,7 @@
     "limit type": "limit type",
     "limited flow strategy": "limited flow strategy",
     "link information": "link information",
-    "live tail": "实时 tail",
+    "live tail": "live tail",
     "load event": "load event",
     "load more": "load more",
     "location analysis": "location analysis",
@@ -2518,7 +2518,6 @@
     "please select an instance": "please select an instance",
     "please select module": "please select module",
     "policy name": "policy name",
-    "press enter to confirm": "press enter to confirm",
     "prev": "prev",
     "previous": "previous",
     "process": "process",
@@ -2681,6 +2680,8 @@
     "transmission analysis": "transmission analysis",
     "transmission traffic": "transmission traffic",
     "transport bytes(KBytes)": "transport bytes(KBytes)",
+    "type filter string, press the Enter key": "type filter string, press the Enter key",
+    "type highlight string, press the Enter key": "type highlight string, press the Enter key",
     "uniform domain name entry": "uniform domain name entry",
     "update configuration": "update configuration",
     "update period": "update period",
