--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2414,7 +2414,7 @@
     "limit type": "限制方式",
     "limited flow strategy": "限流策略",
     "link information": "链路信息",
-    "live tail": "live tail",
+    "live tail": "实时 tail",
     "load event": "load事件",
     "load more": "加载更多",
     "location analysis": "定位分析",
@@ -2518,7 +2518,6 @@
     "please select an instance": "请选择实例",
     "please select module": "请选择模块",
     "policy name": "策略名称",
-    "press enter to confirm": "输入内容后按回车确认",
     "prev": "上一步",
     "previous": "上一个",
     "process": "进程分析",
@@ -2681,6 +2680,8 @@
     "transmission analysis": "传输分析",
     "transmission traffic": "传输流量",
     "transport bytes(KBytes)": "传输字节(KBytes)",
+    "type filter string, press the Enter key": "输入过滤字符串，回车确认",
+    "type highlight string, press the Enter key": "输入高亮字符串，回车确认",
     "uniform domain name entry": "统一域名入口",
     "update configuration": "更新配置",
     "update period": "更新周期",
