feat(dop): resolve i18n conflect

--- a/locales/en.json
+++ b/locales/en.json
@@ -455,6 +455,7 @@
     "full screen": "full screen",
     "greater than": "greater than",
     "healthy": "healthy",
+    "high": "high",
     "historical build": "historical build",
     "host IP": "Host",
     "host name": "host name",
@@ -519,6 +520,7 @@
     "log analysis": "log analysis",
     "log query": "log query",
     "lost connection": "lost connection",
+    "low": "low",
     "lowercase letter": "lowercase letter",
     "machine": "machine",
     "machine overview": "machine overview",
@@ -529,6 +531,7 @@
     "mark": "mark",
     "maximum IOPS": "maximum IOPS",
     "maximum throughput": "maximum throughput",
+    "medium": "medium",
     "member": "member",
     "member added successfully": "member added successfully",
     "member deleted successfully": "member deleted successfully",
@@ -708,6 +711,7 @@
     "remove relation": "remove relation",
     "replace SLA": "replace SLA",
     "report task": "report task",
+    "repository": "repository",
     "request ID": "request ID",
     "request SLA": "request SLA",
     "request body": "request body",
@@ -820,6 +824,7 @@
     "task": " task",
     "task ID": "task ID",
     "task list": "task list",
+    "task ticket": "task ticket",
     "task type": "task type",
     "tcp protocol": "tcp protocol",
     "template already exists": "template already exists",
