--- a/locales/zh.json
+++ b/locales/zh.json
@@ -455,6 +455,7 @@
     "full screen": "全屏",
     "greater than": "大于",
     "healthy": "健康",
+    "high": "高",
     "historical build": "历史构建",
     "host IP": "主机 IP",
     "host name": "主机名称",
@@ -519,6 +520,7 @@
     "log analysis": "日志分析",
     "log query": "日志查询",
     "lost connection": "丢失",
+    "low": "低",
     "lowercase letter": "小写字母",
     "machine": "机器",
     "machine overview": "机器概览",
@@ -529,6 +531,7 @@
     "mark": "标记",
     "maximum IOPS": "最大 IOPS",
     "maximum throughput": "最大吞吐量",
+    "medium": "中",
     "member": "成员",
     "member added successfully": "添加成员成功",
     "member deleted successfully": "删除成员成功",
@@ -708,6 +711,7 @@
     "remove relation": "解除关联",
     "replace SLA": "更换SLA",
     "report task": "报告任务",
+    "repository": "仓库",
     "request ID": "请求ID",
     "request SLA": "请求SLA",
     "request body": "请求体",
@@ -820,6 +824,7 @@
     "task": "任务",
     "task ID": "任务 ID",
     "task list": "任务列表",
+    "task ticket": "任务工单",
     "task type": "任务类型",
     "tcp protocol": "TCP 协议",
     "template already exists": "该模板已存在",
