feat(dop): resove conflict

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1286,6 +1286,7 @@
     "processing": "processing",
     "professional edition": "professional edition",
     "project admin confirming": "project admin confirming",
+    "project collaboration": "project collaboration",
     "project level app": "project level app",
     "project-level-app-form-tip": "after setting as a project-level application, the pipeline of the application can directly call the pipelines of other applications of the project",
     "public application": "public application",
@@ -2411,7 +2412,6 @@
     "issue type": "issue type",
     "issue workflow": "issue workflow",
     "issue-workflow-config-tip": "Project issues include milestone, requirement, bug and task. And you can set up workflow state for each issue if you want",
-    "issues": "issues",
     "issues associated label will be deleted, confirm to delete?": "issues associated label will be deleted, confirm to delete?",
     "iteration": "iteration",
     "iteration goal": "iteration goal",
