--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1287,6 +1287,7 @@
     "processing": "进行中",
     "professional edition": "专业版",
     "project admin confirming": "项目管理员确认中",
+    "project collaboration": "项目协同",
     "project level app": "项目级应用",
     "project-level-app-form-tip": "设置为项目级应用后，该应用的流水线中直接可以调用项目其他应用的流水线",
     "public application": "公开应用",
@@ -2412,7 +2413,6 @@
     "issue type": "事项类型",
     "issue workflow": "事项工作流",
     "issue-workflow-config-tip": "事项类型覆盖里程碑、需求、缺陷和任务，可以对每个事项类型进行不同配置。如需改变工作流类型，您可以选择具体的事项类型进行修改。",
-    "issues": "项目协同",
     "issues associated label will be deleted, confirm to delete?": "将会删除事项中关联的标签，确认删除？",
     "iteration": "迭代",
     "iteration goal": "迭代目标",
