feat(cmp): add org resource usage summary page

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -586,6 +586,31 @@
     "6 to 32 digits, must contain letters in uppercase and lowercase and numbers": "8 to 32 digits, including both uppercase letters, lowercase letters, and numbers",
     "After successful setting, the system will automatically renew as set.": "after the setting is successful, the system will automatically renew the fee at this time",
     "Availability zone refers to a physical area where power and network are independent. In the same private network, the intranet is connected and fault isolation can be realized among availability zones.": "A region can include multiple zones (availability zones) with independent power supply and network connectivity, Zones in the same VPC are connected to the same internal network, Zones are isolated from failures in other zones",
+    "resource overview": "resource overview",
+    "resource distribute": "resource distribute",
+    "Allocated resources: The resources reserved by project resource Quota are configured": "Allocated resources: The resources reserved by project resource Quota are configured",
+    "Occupied resource: The portion of allocated resource actually occupied by Kubernetes Request resource Request": "Occupied resource: The portion of allocated resource actually occupied by Kubernetes Request resource Request",
+    "Node conversion formula": "Node conversion formula",
+    "Core": "Core",
+    "one node": "one node",
+    "Memory": "Memory",
+    "Number of converted nodes": "Number of converted nodes",
+    "Water Level": "Water Level",
+    "Memory Water Level": "Memory Water Level",
+    "Description": "Description",
+    "Owner": "Owner",
+    "Allocation of project resources": "Allocation of project resources",
+    "The total number of selected resources": "The total number of selected resources",
+    "内存": "内存",
+    "Conversion nodes": "Conversion nodes",
+    "Total": "Total",
+    "Trend of cluster resources": "Trend of cluster resources",
+    "Daily": "Daily",
+    "Weekly": "Weekly",
+    "Monthly": "Monthly",
+    "save": "save",
+    "Project": "Project",
+    "resource type": "resource type",
     "Basic Information": "Basic Information",
     "CID and GID are reserved fields of Group ID. Topic cannot start with CID and GID.": "&quot;CID&quot; and &quot;GID&quot; are reserved fields of Group ID",
     "CIDR": "CIDR",
