--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -587,6 +587,31 @@
     "After successful setting, the system will automatically renew as set.": "设置成功后，系统自动以此时长进行续费",
     "Availability zone refers to a physical area where power and network are independent. In the same private network, the intranet is connected and fault isolation can be realized among availability zones.": "可用区是指在同一地域内，电力和网络互相独立的物理区域。在同一专有网络内可用区与可用区之间内网互通，可用区之间能做到故障隔离。",
     "Basic Information": "基本信息",
+    "resource overview": "资源总览",
+    "resource distribute": "资源分布",
+    "Allocated resources: The resources reserved by project resource Quota are configured": "已分配资源&#58; 按照项目资源 Quota 配置所预留出的资源",
+    "Occupied resource: The portion of allocated resource actually occupied by Kubernetes Request resource Request": "已占用资源&#58; 已分配资源中，实际通过 Kubernetes 的 Request 资源申请方式占用的部分",
+    "Node conversion formula": "节点转换公式",
+    "Core": "核",
+    "one node": "一个节点",
+    "Memory": "内存",
+    "Number of converted nodes": "转换节点数",
+    "Water Level": "水位",
+    "Memory Water Level": "内存水位",
+    "Description": "描述",
+    "Owner": "负责人",
+    "Allocation of project resources": "项目资源分布",
+    "The total number of selected resources": "筛选项资源总和",
+    "内存": "内存",
+    "Conversion nodes": "转换节点",
+    "Total": "总计",
+    "Trend of cluster resources": "集群资源变化趋势",
+    "Daily": "每天",
+    "Weekly": "每周",
+    "Monthly": "每月",
+    "save": "保存",
+    "Project": "项目",
+    "resource type": "资源类型",
     "CID and GID are reserved fields of Group ID. Topic cannot start with CID and GID.": "“CID”和“GID”是Group ID的保留字段，Topic不能以“CID”和“GID”开头",
     "CIDR": "网段",
     "CIDR-tips": "支持使用 192.168.0.0/16、172.16.0.0/12、10.0.0.0/8 及其子网作为专有网络地址段，网段掩码有效范围 8-24。填写示例：192.168.0.0/16。",
